Stopped showing scrollbars in the track selector when not needed

--- a/frontend/style/annotations/track-selection.less
+++ b/frontend/style/annotations/track-selection.less
@@ -29,7 +29,7 @@ div#modal-track-selection{
     ul.list-group {
         list-style: none;
         border: 1px solid @grayLight;
-        overflow: scroll;
+        overflow-y: auto;
         margin-left: 0px;
         max-height: 350px;
         box-shadow: inset 1px 1px 3px @grayLight;
